# focus

./: pyproject.toml  requirements.txt
old_client/: VoiceStreamAI_Client.html  utils.js
quasser-client/: README.md  package-lock.json  package.json  quasar.config.js
quasser-client/src/components/: ChatComponent.vue  ExampleComponent.vue
quasser-client/src/pages/: IndexPage.vue
quasser-client/src/stores/: useChatStore.js
quasser-client/src/utils/: audioProcessing.js  socket.js  websocket.js
src/: audio_utils.py  client.py  config.py  main.py  server.py
src/asr/: asr_factory.py  asr_interface.py  faster_whisper_asr.py  whisper_asr.py
src/buffering_strategy/: buffering_strategies.py  buffering_strategy_factory.py  buffering_strategy_interface.py
src/spr/: pyannote_embedding_spr.py  spr_factory.py  spr_interface.py
src/vad/: pyannote_vad.py  vad_interface.py
